--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -24,4 +24,6 @@ jobs:
           deploymentName: ${{ github.run_number }}
           resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
           template: ./deploy/main.bicep
-          parameters: environmentType=${{ env.ENVIRONMENT }}      
+          parameters: 
+            administratorLogin=${{ secrets.POSTGRES_ADMIN }}
+            administratorLoginPassword=${{ secrets.POSTGRES_ADMIN_PASSWD }}              
