--- a/.github/workflows/psrule1.yml
+++ b/.github/workflows/psrule1.yml
@@ -14,6 +14,11 @@ jobs:
     # Analyze Azure resources using PSRule for Azure
     - name: Analyze Azure template files
       uses: microsoft/ps-rule@v2.7.0
+      input:
+        pathIgnore:
+        # Exclude files with these extensions
+        - '*.sh'
+        - '*.yml'
       with:
         modules: 'PSRule.Rules.Azure'
       env:
