Expansion as env setting

--- a/.github/workflows/psrule1.yml
+++ b/.github/workflows/psrule1.yml
@@ -19,3 +19,4 @@ jobs:
         inputPath: /deploy/
       env:
         PSRULE_INPUT_IGNOREUNCHANGEDPATH: true
+        PSRULE_CONFIGURATION_AZURE_BICEP_FILE_EXPANSION: true
