--- a/.github/workflows/psrule2.yml
+++ b/.github/workflows/psrule2.yml
@@ -29,6 +29,6 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Run PSRule analysis
-      uses: Microsoft/ps-rule@v2.7.0
+      uses: microsoft/ps-rule@v2.7.0
       with:
-        modules: PSRules.Rules.Azure
+        modules: 'PSRules.Rules.Azure'
